updated reference name from ref to main

--- a/main.tex
+++ b/main.tex
@@ -73,6 +73,6 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \input{src/documentation}
 
 \bibliographystyle{abbrv}
-\bibliography{ref}
+\bibliography{main}
 
 \end{document}
