removed underscores from names and references and updated Makefile

--- a/main.tex
+++ b/main.tex
@@ -47,21 +47,21 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 % \input{src/gnss_intro}
 
 \section{GNSS Accuracy}
-\label{sec:gnss_accuracy}
-\input{src/gnss_accuracy}
+\label{sec:gnssaccuracy}
+\input{src/gnssaccuracy}
 
 \section{PPP Improvements}
-\label{sec:gnss_ppp}
-\input{src/gnss_ppp}
+\label{sec:gnssppp}
+\input{src/gnssppp}
  
 \section{Galileo High Accuracy Service}
-\label{sec:galileo_has}
-\input{src/galileo_has}
+\label{sec:galileohas}
+\input{src/galileohas}
 \FloatBarrier
 
 \section{GNSS Receivers}
-\label{sec:gnss_receivers}
-\input{src/gnss_receivers}
+\label{sec:gnssreceivers}
+\input{src/gnssreceivers}
 \FloatBarrier
 
 \section{Conclusions and Further Work}
@@ -73,6 +73,6 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \input{src/documentation}
 
 \bibliographystyle{abbrv}
-\bibliography{main}
+\bibliography{ref.bib}
 
 \end{document}
