--- a/ref.bib
+++ b/ref.bib
@@ -37,7 +37,7 @@
 	publisher = {ESA Navipedia},
 }
 
-@inproceedings{dsp_receiver,
+@inproceedings{dspreceiver,
 	author = {Jin Tian, Shi Lin},
 	title = {{Single DSP Hardware Design in Real-time Multi-Constellation Satellite Navigation
 Receiver}},
@@ -46,7 +46,7 @@ Receiver}},
 	publisher = {IEEE Ninth International Conference on Computer and Information Technology},
 }
 
-@inproceedings{ref_station_receiver,
+@inproceedings{refstationreceiver,
 	author = {Gianluca Franzoni, Livio Marradi, Letizia Scaciga},
 	title = {{Multi-constellation, multi-frequency, multi-signal reference station receiver for GPS/Galileo/Giove}},
 	year = {2010},
