--- a/src/galileohas.tex
+++ b/src/galileohas.tex
@@ -102,12 +102,12 @@ The E6 Galileo signal is spread in two components \cite{e6breceiver}:
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.7]{img/signal_generation.png}
+\includegraphics[scale=0.7]{img/signalgeneration.png}
 \caption{E6 Signal Generation, Source:\cite{e6breceiver}}
-\label{fig:signal_generation}
+\label{fig:signalgeneration}
 \end{figure}
 
-The E6 signal characteristics can be found in table \ref{table:2}. The signal generation diagram is presented in figure \ref{fig:signal_generation}. Before the data signal enters the mixer, a logic 0 bit is mapped to +1 signal level and a logic 1 bit is mapped to -1 signal level\cite{e6breceiver}.
+The E6 signal characteristics can be found in table \ref{table:2}. The signal generation diagram is presented in figure \ref{fig:signalgeneration}. Before the data signal enters the mixer, a logic 0 bit is mapped to +1 signal level and a logic 1 bit is mapped to -1 signal level\cite{e6breceiver}.
 
 \subsection{Galileo E6-B Data Structure}
 \label{subsec:e6data}
