--- a/src/gnssppp.tex
+++ b/src/gnssppp.tex
@@ -8,12 +8,12 @@ The recent GNSS satellites launched in orbit transmit signals on multiple freque
 
 \begin{figure}[h]
 \centering
-\includegraphics{img/Galileo_Frequency_Plan.png}
+\includegraphics{img/GalileoFrequencyPlan.png}
 \caption{Galileo Frequency Plan, Source:\cite{galileoSisIcd}}
-\label{fig:galileo_frequency_plan}
+\label{fig:galileofrequencyplan}
 \end{figure}
 
-Figure \ref{fig:galileo_frequency_plan} presents the frequencies used by GPS and Galileo. Using multiple frequencies allows phase measurements without ionosphere errors\cite{instantPPP}. The Galileo E6 signal enables instantaneous convergence for PPP-AR\cite{instantPPP}.
+Figure \ref{fig:galileofrequencyplan} presents the frequencies used by GPS and Galileo. Using multiple frequencies allows phase measurements without ionosphere errors\cite{instantPPP}. The Galileo E6 signal enables instantaneous convergence for PPP-AR\cite{instantPPP}.
 
 The GNSS receiver presented in \cite{instantPPP} uses E1, E5a, E5b and E6 signals received from one Galileo satellite to compute the ionosphere-free pseudorange, ionospheric delay and four carrier phase ambiguities\cite{instantPPP}. The Galileo E5 could also be used, however, its frequency is so close to E5a and E5b signals that its contribution is negligible\cite{instantPPP}.
 
