--- a/src/documentation.tex
+++ b/src/documentation.tex
@@ -1,9 +1,9 @@
 According to the Systematic State-of-the-Art Review Methodology, a list of keywords was compiled. The list is \emph{GNSS, Galileo, PPP, SDR, FPGA, DSP, SIS, HAS}. From these, a list of papers was selected. The following papers have been reviewed in this work.
 
 \begin{itemize}
-    \item \cite{instantPPP} in Section \ref{sec:gnss_ppp}
-    \item \cite{galileoHasPolicy} in Section \ref{sec:gnss_accuracy} and Section \ref{sec:galileo_has}
-    \item \cite{e6breceiver} in Section \ref{subsec:e6b_recv} and Sections \ref{subsec:e6signals} and \ref{subsec:e6data}
-    \item \cite{ref_station_receiver} in Section \ref{subsec:mboc_recv}
-    \item \cite{dsp_receiver} in Section \ref{subsec:dsp_recv}
+    \item \cite{instantPPP} in Section \ref{sec:gnssppp}
+    \item \cite{galileoHasPolicy} in Section \ref{sec:gnssaccuracy} and Section \ref{sec:galileohas}
+    \item \cite{e6breceiver} in Section \ref{subsec:e6brecv} and Sections \ref{subsec:e6signals} and \ref{subsec:e6data}
+    \item \cite{refstationreceiver} in Section \ref{subsec:mbocrecv}
+    \item \cite{dspreceiver} in Section \ref{subsec:dsprecv}
 \end{itemize}
